tests/baselines/reference/mappedTypeErrors2.errors.txt
tests/cases/conformance/types/mapped/mappedTypeErrors2.ts(7,30): error TS2536: Type 'K' cannot be used to index type 'T1<K>'.
tests/cases/conformance/types/mapped/mappedTypeErrors2.ts(11,30): error TS2536: Type 'K' cannot be used to index type 'T3'.
tests/cases/conformance/types/mapped/mappedTypeErrors2.ts(14,47): error TS2536: Type 'S' cannot be used to index type 'AB'.
tests/cases/conformance/types/mapped/mappedTypeErrors2.ts(17,49): error TS2536: Type 'L' cannot be used to index type '{}'.


==== tests/cases/conformance/types/mapped/mappedTypeErrors2.ts (4 errors) ====
    type AB = {
        a: 'a'
        b: 'a'
    }
    
    type T1<K extends keyof AB> = { [key in AB[K]]: true }
    type T2<K extends 'a'|'b'> = T1<K>[K] // BUG 1: should be error for K = 'b'
                                 ~~~~~~~~
!!! error TS2536: Type 'K' cannot be used to index type 'T1<K>'.
    
    type R = AB[keyof AB]; // "a"
    type T3 = { [key in R]: true }
    type T4<K extends 'a'|'b'> = T3[K] // error as expected
                                 ~~~~~
!!! error TS2536: Type 'K' cannot be used to index type 'T3'.
    
    // BUG 2: 'extra' not checked in AB[S]
    type T5<S extends 'a'|'b'|'extra'> = {[key in AB[S]]: true}[S]
                                                  ~~~~~
!!! error TS2536: Type 'S' cannot be used to index type 'AB'.
    
    // Should still error, for L = 'b'
    type T6<S extends 'a'|'b', L extends 'a'|'b'> = {[key in AB[S]]: true}[L]
                                                    ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2536: Type 'L' cannot be used to index type '{}'.
    
    // Should be OK
    type T7<S extends 'a'|'b', L extends 'a'> = {[key in AB[S]]: true}[L]
    